[package]
name = "rms-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14"       # protobuf
tonic = "0.14"       # grpc
tinc = "0.2"         # GRPc to REST transcoder
serde = "1.0"
serde_json = "1.0"
futures-util = "0.3"

axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
http = "1.0"
tower-http = { version = "0.6", features = [
    "set-header",
    "map-request-body",
    "map-response-body",
] }

[build-dependencies]
tinc-build = "0.2"
